<resources>

    <!--Author: Cillian Whelan-->
    <!--Student Number: L00162026-->
    <!--Course: BSc (Hons) Contemporary Software Development-->
    <!--Subject: Project-->

    <!--    Splash page   -->
    <string name="app_name">Final Project</string>
    <string name="startup_splash_page_line_1">Cillian Whelan</string>
    <string name="startup_splash_page_line_2">L00162026</string>
    <string name="startup_splash_page_line_3">BSc (Hons) Contemporary Software Development</string>


    <!--    Login page -->
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="edit_email_id">Email ID</string>
    <string name="edit_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="button_label_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>


    <!--    Register page-->
    <string name="register_page_title">CREATE AN ACCOUNT</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_surname">Surname</string>
    <string name="enter_email">Email ID</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login_already_registered">Login</string>
    <string name="accept_t_and_c">I accept terms and conditions</string>
    <string name="user_registered_successfully">Registration Successful!</string>


    <!--    SnackBar messages-->
    <string name="error_first_name">Please enter a first name</string>
    <string name="error_surname">Please enter a surname</string>
    <string name="error_email_address">Please enter an email address</string>
    <string name="error_invalid_email_address">Please enter a valid email address</string>
    <string name="error_password">Please enter a password</string>
    <string name="error_confirm_password">Please confirm password</string>
    <string name="error_passwords_don_t_match">Passwords do not match</string>
    <string name="error_t_and_c_not_checked">Please agree to terms and conditions</string>
    <string name="success">Success!</string>


    <!--    progress dialogue-->
    <string name="please_wait">Please Wait</string>


    <!--    Reset password-->
    <string name="title_forgot_password">Forgot Password</string>
    <string name="text_forgot_password">Please enter your email address. You will receive a link to reset your password.</string>
    <string name="btn_submit">Submit</string>


    <!--    Profile-->
    <string name="title_profile">User Profile</string>
    <string name="edit_first_name">First Name</string>
    <string name="edit_surname">Surname</string>
    <string name="edit_emailID">Email ID</string>
    <string name="edit_mobile">Mobile Number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="btn_save_details">Save Details</string>
    <string name="enter_mobile">Please enter a mobile number</string>
    <string name="cant_change_email">You cannot change the email address associated with your account</string>


    <!--    Gender Selector-->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>


    <!--    Dashboard-->
    <string name="title_activity_dashboard">Project</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="title_settings">Settings</string>
    <string name="add_products">Add Products</string>

    <!--    Settings Activity-->
    <string name="btn_logout_string">Logout</string>
    <string name="btn_address_string">Address</string>
    <string name="btn_edit_details">Edit user details</string>

    <!--    Product Activity-->
    <string name="product_details">Product Details</string>
    <string name="hint_product_name">Product Name</string>
    <string name="edit_product_name">Product Name</string>
    <string name="hint_product_description">Product Description</string>
    <string name="edit_product_description">Product Description</string>
    <string name="hint_price">Price</string>
    <string name="edit_price">€ Price</string>
    <string name="btn_save_product">Save Product</string>
    <string name="edit_quantity">Quantity</string>
    <string name="hint_quantity">Quantity</string>
    <string name="product_added_successfully">Product added successfully</string>
    <string name="enter_product_name">Please enter the product name</string>
    <string name="enter_product_description">Please enter product description</string>
    <string name="enter_price">Please enter price</string>
    <string name="enter_quantity">Please enter quantity</string>
    <string name="select_picture">Please choose an image</string>

    <!--    Address Activity-->
    <string name="title_address">Address</string>
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_address_line_3">Address Line 3</string>
    <string name="hint_address_line_4">Address Line 4</string>
    <string name="et_address_line_1">Address Line 1</string>
    <string name="et_address_line_2">Address Line 2</string>
    <string name="et_address_line_3">Address Line 3</string>
    <string name="et_address_line_4">Address Line 4</string>
    <string name="title_activity_cart">CartActivity</string>

    <!--    Cart Activity-->
    <string name="title_cart">Cart</string>


    <!--    Confirm details-->
    <string name="title_confirm_details">Confirm Details</string>
    <string name="btn_proceed_to_payment">Proceed to Payment</string>
    <string name="btn_chaneg_details">Change Details</string>


    <!--    Order Activity-->
    <string name="title_order_activity">Order Confirmation</string>
    <string name="btn_browse_products">Browse Products</string>
    <string name="btn_view_order">View Order</string>

    <!--    Confirm Payment-->
    <string name="title_confirm_payment">Confirm Payment</string>
    <string name="stripe_payments">Stripe payment should be implemented here</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="total_order_cost">Total cost of order: €</string>

    <!--    Order Details-->
    <string name="title_order_details">Order Details</string>

</resources>