<?xml version="1.0" encoding="utf-8"?>

<!--Author: Cillian Whelan-->
<!--Student Number: L00162026-->
<!--Course: BSc (Hons) Contemporary Software Development-->
<!--Subject: Project-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/theme_landscape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.e_commerce_11.utilities.BoldTextView
            android:id="@+id/address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="75dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:text="@string/title_address"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/sv_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toolbar_address_activity"
        app:layout_constraintTop_toBottomOf="@id/toolbar_address_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_change_address_line_1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_address_line_1"
                android:textColorHint="@color/themeDarkPurple"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.e_commerce_11.utilities.EditText
                    android:id="@+id/et_change_address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/themeDarkPurple"
                    android:textSize="@dimen/et_textSize"
                    android:visibility="visible"
                    tools:text="@string/et_address_line_1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_change_address_line_2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_address_line_2"
                android:textColorHint="@color/themeDarkPurple"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_change_address_line_1">

                <com.example.e_commerce_11.utilities.EditText
                    android:id="@+id/et_change_address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/themeDarkPurple"
                    android:textSize="@dimen/et_textSize"
                    android:visibility="visible"
                    tools:text="@string/et_address_line_2" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_change_address_line_3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_address_line_3"
                android:textColorHint="@color/themeDarkPurple"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_change_address_line_2">

                <com.example.e_commerce_11.utilities.EditText
                    android:id="@+id/et_change_address_line_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/themeDarkPurple"
                    android:textSize="@dimen/et_textSize"
                    android:visibility="visible"
                    tools:text="@string/et_address_line_3" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_change_address_line_4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_address_line_4"
                android:textColorHint="@color/themeDarkPurple"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_change_address_line_3">

                <com.example.e_commerce_11.utilities.EditText
                    android:id="@+id/et_change_address_line_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/themeDarkPurple"
                    android:textSize="@dimen/et_textSize"
                    android:visibility="visible"
                    tools:text="@string/et_address_line_4" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.example.e_commerce_11.utilities.Button
                android:id="@+id/btn_save_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_save_details"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_change_address_line_4"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>