<?xml version="1.0" encoding="utf-8"?>

<!--Author: Cillian Whelan-->
<!--Student Number: L00162026-->
<!--Course: BSc (Hons) Contemporary Software Development-->
<!--Subject: Project-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.UserProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirm_Payment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/theme_landscape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.e_commerce_11.utilities.BoldTextView
            android:id="@+id/order_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="75dp"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:text="@string/title_confirm_payment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.example.e_commerce_11.utilities.BoldTextView
        android:id="@+id/text_confirm_payment_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/stripe_payments"
        android:textColor="@color/themeDarkPurple"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirm_Payment" />

    <LinearLayout
        android:id="@+id/ll_id_confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_confirm_payment_message">

        <com.example.e_commerce_11.utilities.BoldTextView
            android:id="@+id/total_order_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:gravity="center"
            android:text="@string/total_order_cost"
            android:textColor="@color/themeDarkPurple"
            android:textStyle="bold" />

        <com.example.e_commerce_11.utilities.BoldTextView
            android:id="@+id/total_order_cost_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/themeDarkPurple"
            android:textStyle="bold" />

    </LinearLayout>


    <com.example.e_commerce_11.utilities.Button
        android:id="@+id/btn_confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_background"
        android:text="@string/confirm_payment"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>